assert-struct/tests/snapshots/basic__field_mismatch.snap
---
source: assert-struct/tests/basic.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/basic_errors/field_mismatch.rs:19:19
   |
19 |             name: "Bob",
   |                   ^^^^^ got "Alice"
